htaccess remove page name change Index page correction, tag add, keywords update

--- a/blog.html
+++ b/blog.html
@@ -123,7 +123,7 @@
 			<!-- logo start -->
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
-					<a href="index" class="header-logo__box js-pointer-large js-animsition-link">
+					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
 						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
 						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
 					</a>
@@ -143,7 +143,7 @@
 			<div class="header-contact js-midnight-color js-headroom">
 				<div class="header-contact__flex">
 					<div class="header-contact__anim">
-						<a href="contact" class="header-contact__btn vertical-text center js-pointer-large">
+						<a href="contact.html" class="header-contact__btn vertical-text center js-pointer-large">
 							<span class="vertical-text__inner"><i class="far fa-comment-dots"></i> Get in touch</span>
 						</a>
 					</div>
@@ -190,25 +190,25 @@
 		<nav class="landing-nav js-midnight-color">
 			<ul class="landing-nav__flex">
 				<li class="landing-nav__btn">
-					<a href="index" class="landing-nav__inner js-smooth-scroll js-pointer-large">Home</a>
+					<a href="index.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Home</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="about-us" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
+					<a href="about.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="services" class="landing-nav__inner js-smooth-scroll js-pointer-large">Services</a>
+					<a href="services.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Services</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="academy" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
+					<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="client" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
+					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="blog_sliders" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
+					<a href="blog.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="contact" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
+					<a href="contact.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
 				</li>
 			</ul>
 		</nav><!-- landing-nav end -->
@@ -228,42 +228,42 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="index" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="index.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Home">Home</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="about-us" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="about.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="About">About</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="services" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="services.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Services">Services</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="academy" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="academy.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Academy">Academy</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="client" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="client.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Client">Client</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="blog" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="blog.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Blog">Blog</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -362,7 +362,7 @@
 							<!-- swiper-slide start -->
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
-									<a href="Three-Essential-Digital-Marketing-Channels-In-2020" class="d-block hover-box js-animsition-link js-pointer-large">
+									<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="d-block hover-box js-animsition-link js-pointer-large">
 										<img class="anim-img-scale__inner" src="assets/images/posts/essential/horizontal-essential.jpg" alt="Post">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
@@ -390,7 +390,7 @@
 							<!-- swiper-slide start -->
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
-									<a href="Revolution-in-digital-Space" class="d-block hover-box js-animsition-link js-pointer-large">
+									<a href="Revolution-in-digital-Space.html" class="d-block hover-box js-animsition-link js-pointer-large">
 										<img class="anim-img-scale__inner" src="assets/images/posts/digital-revolution/vertical-dr.jpg" alt="Post">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
@@ -418,7 +418,7 @@
 							<!-- swiper-slide start -->
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
-									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach" class="d-block hover-box js-animsition-link js-pointer-large">
+									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="d-block hover-box js-animsition-link js-pointer-large">
 										<img class="anim-img-scale__inner" src="assets/images/posts/refine-marketing/horizontal-target.jpg" alt="Post">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
@@ -446,7 +446,7 @@
 							<!-- swiper-slide start -->
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
-									<a href="top-choices-in-web-hosting" class="d-block hover-box js-animsition-link js-pointer-large">
+									<a href="top-choices-in-web-hosting.html" class="d-block hover-box js-animsition-link js-pointer-large">
 										<img class="anim-img-scale__inner" src="assets/images/posts/hosting/horizontal-hosting.jpg" alt="Post">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
@@ -474,7 +474,7 @@
 							<!-- swiper-slide start -->
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
-									<a href="top-choices-in-web-hosting" class="d-block hover-box js-animsition-link js-pointer-large">
+									<a href="the-future-is-multi-shaped.html" class="d-block hover-box js-animsition-link js-pointer-large">
 										<img class="anim-img-scale__inner" src="assets/images/posts/multi-shaped/horizontal.jpg" alt="Post">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
@@ -547,13 +547,13 @@
 											<a href="#0" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">14 February 2021</a>
 										</li>
 									</ul>
-									<a href="the-future-is-multi-shaped" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
+									<a href="the-future-is-multi-shaped.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
 										<h3 class="headline-xs">The Future Is <br>Multi-shaped</h3>
 										<p class="body-text-xs margin-top-20">
 											Our education system was designed to turn us into “I-shaped” people. I's are one dimensional, linear in nature specialist of one domain. The world we live in now require more collaboration,...
 										</p>
 									</a>
-									<a href="the-future-is-multi-shaped" class="skew-btn js-pointer-large js-animsition-link">
+									<a href="the-future-is-multi-shaped.html" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content">Continue reading</span>
 											<span class="skew-btn__arrow"></span>
@@ -562,7 +562,7 @@
 								</div>
 							</div>
 							<div class="six-columns padding-top-30">
-								<a href="the-future-is-multi-shaped" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+								<a href="the-future-is-multi-shaped.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
 											<img class="img-hover-scale" src="assets/images/posts/multi-shaped/veritcal.jpg" alt="Post">
@@ -575,7 +575,7 @@
 						<!-- blog-entry start -->
 						<article class="flex-container flex-align-center padding-top-60">
 							<div class="six-columns padding-top-30">
-								<a href="top-choices-in-web-hosting" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+								<a href="top-choices-in-web-hosting.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
 											<img class="img-hover-scale" src="assets/images/posts/hosting/vertical-hosting.jpg" alt="Post">
@@ -596,13 +596,13 @@
 											<a href="#0" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">11 February 2021</a>
 										</li>
 									</ul>
-									<a href="top-choices-in-web-hosting" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
+									<a href="top-choices-in-web-hosting.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
 										<h3 class="headline-xs">Top Choices In Web Hosting</h3>
 										<p class="body-text-s margin-top-20">
 											In today’s Society, if you have got something to say, do, sell or whatever it is, you are going to need a website and you are going to need a really good provider to make sure that your traffic is managed that people can see it’s visibility and...
 										</p>
 									</a>
-									<a href="top-choices-in-web-hosting" class="skew-btn js-pointer-large js-animsition-link">
+									<a href="top-choices-in-web-hosting.html" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content">Continue reading</span>
 											<span class="skew-btn__arrow"></span>
@@ -625,11 +625,11 @@
 											<a href="#0" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">10 February 2021</a>
 										</li>
 									</ul>
-									<a href="Revolution-in-digital-Space" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
+									<a href="Revolution-in-digital-Space.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
 										<h3 class="headline-xs">Revolution in digital Space</h3>
 										<p class="body-text-xs margin-top-20">The Year 2020 has been a year of change both within the real and virtual world. the huge revolution within the Digital World was extraordinary. Some changes were positive and a few negative. it had been the time of latest normal which seemed impossible before...</p>
 									</a>
-									<a href="Revolution-in-digital-Space" class="skew-btn js-pointer-large js-animsition-link">
+									<a href="Revolution-in-digital-Space.html" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content">Continue reading</span>
 											<span class="skew-btn__arrow"></span>
@@ -638,7 +638,7 @@
 								</div>
 							</div>
 							<div class="six-columns padding-top-30">
-								<a href="Revolution-in-digital-Space" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+								<a href="Revolution-in-digital-Space.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
 											<img class="img-hover-scale" src="assets/images/posts/digital-revolution/horizontal-dr.jpg" alt="Post">
@@ -651,7 +651,7 @@
 						<!-- blog-entry start -->
 						<article class="flex-container flex-align-center padding-top-60">
 							<div class="six-columns padding-top-30">
-								<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+								<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
 											<img class="img-hover-scale" src="assets/images/posts/refine-marketing/vertical-target.jpg" alt="Post">
@@ -672,14 +672,14 @@
 											<a href="#0" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">10 February 2021</a>
 										</li>
 									</ul>
-									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
+									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
 										<h3 class="headline-xs">You Have a chance to<br>
 										Refine Your Marketing Approach</h3>
 										<p class="body-text-s margin-top-20">
 											2020 forced many small businesses to become focused in ways they didn’t imagine last winter. I’m not gonna enter the apparent details that we’ve all lived through recently. You’re alright conscious of them a day . At DAX , we’ve refined our approach during this point ...
 										</p>
 									</a>
-									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach" class="skew-btn js-pointer-large js-animsition-link">
+									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content">Continue reading</span>
 											<span class="skew-btn__arrow"></span>
@@ -704,7 +704,7 @@
 											<a href="#0" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">18 September 2020</a>
 										</li>
 									</ul>
-									<a href="Three-Essential-Digital-Marketing-Channels-In-2020" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
+									<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
 										<h3 class="headline-xs text-color-white">
 											Three Essential Digital Marketing<br>
 											Channels In 2020
@@ -712,7 +712,7 @@
 										<p class="body-text-s margin-top-20 text-color-white">
 											2020 has been a challenging year for marketing professionals and agencies would be an understatement. While some companies and industries are affected more than that, every marketer...</p>
 									</a>
-									<a href="Three-Essential-Digital-Marketing-Channels-In-2020" class="skew-btn js-pointer-large js-animsition-link">
+									<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-white">Continue reading</span>
 											<span class="skew-btn__arrow white"></span>
@@ -721,7 +721,7 @@
 								</div>
 							</div>
 							<div class="six-columns padding-top-30">
-								<a href="Three-Essential-Digital-Marketing-Channels-In-2020" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+								<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
 											<img class="img-hover-scale" src="assets/images/posts/essential/vertical essential.jpg" alt="Post">
@@ -769,25 +769,25 @@
 						<div class="four-columns footer-nav-mobile-padding">
 							<ul class="column-l-r-margin-10 footer-nav-list js-footer-hover-box">
 								<li>
-									<a href="index" class="footer-nav__btn js-pointer-small js-footer-hover-link">Home</a>
+									<a href="index.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Home</a>
 								</li>
 								<li>
-									<a href="about-us" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
+									<a href="about.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
 								</li>
 								<li>
-									<a href="services" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
+									<a href="services.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
 								</li>
 								<li>
-									<a href="academy" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
+									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
 								</li>
 								<li>
-									<a href="client" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
+									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
 								</li>
 								<li>
-									<a href="blog_sliders" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
+									<a href="blog.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
 								</li>
 								<li>
-									<a href="contact" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
+									<a href="contact.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
 								</li>
 							</ul>
 						</div><!-- column end -->
