--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 
 		gtag('config', 'UA-176593466-1');
 	</script>
+	<!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TX72MLZ');</script>
+    <!-- End Google Tag Manager -->
 
 
 	<!-- Primary Meta Tags -->
@@ -23,7 +30,9 @@
 	<meta name="title" content="DAX - Best Digital Marketing Agency">
 	<meta name="description" content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
 			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
-	<meta name="keywords" content="Digital marketing,web development, app development,advertising, agency,graphic designing,kannur, graphic designing kannur,kerala, seo,search engine optimization,ecommerce digital marketing agency,advertising mediadigital marketing solutions,digital marketing agency near me,digital marketing classes,mba in digital marketing,digital marketing specialist,digital marketing manager,digital marketing salary,digital marketing interview questions,digital marketing news,digital marketing strategies,digital market,digital marketing companies,digital marketing training,digital marketing certification,google digital marketing certificate,digital marketing agencies,digital marketing institute,digital advertising,digital marketing definition,digital marketer,digital marketing strategy,digital marketing tools,digital marketing courses,learn digital with google,digital marketing services,google garage digital marketing,digital marketing jobs,digital marketing course online free,digital marketing company,google digital marketing,fundamentals of digital marketing,marketing digital,digital marketing agency,digital marketing online course,digital marketing course online,digital marketing course,what is digital marketing,google digital marketing course">
+
+	<meta name="keywords" content="Dax, DaxAds, Thedaxads, Digital marketing, web development, app development, advertising agency ,graphic designing, kannur, graphic designing kannur,kerala, seo,search engine optimization,ecommerce digital marketing agency,advertising mediadigital marketing solutions,digital marketing agency near me,digital marketing classes,mba in digital marketing,digital marketing specialist,digital marketing manager,digital marketing salary,digital marketing interview questions,digital marketing news,digital marketing strategies,digital market,digital marketing companies,digital marketing training,digital marketing certification,google digital marketing certificate,digital marketing agencies,digital marketing institute,digital advertising,digital marketing definition,digital marketer,digital marketing strategy,digital marketing tools,digital marketing courses,learn digital with google,digital marketing services,google garage digital marketing,digital marketing jobs,digital marketing course online free,digital marketing company,google digital marketing,fundamentals of digital marketing,marketing digital,digital marketing agency,digital marketing online course,digital marketing course online,digital marketing course,what is digital marketing,google digital marketing course, best digital marketing agency,online marketing,best digital marketing agency kannur,top 10 digital marketing agency,digital marketing & training,training center,digital courses,course,web courses,designing courses">
+
 	<meta name="author" content="DAX - Best Digital Marketing Agency">
 	<meta name="robots" content= "index, follow">
 
@@ -60,6 +69,12 @@
 		<link href="assets/css/style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body class="preloader cursor-anim-enable landing-page">
+
+		<!-- Google Tag Manager (noscript) -->
+			 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TX72MLZ"
+			 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
+
 		<!-- preloader-loading start -->
 		<div class="preloader__logoload-box">
 			<img class="preloader__logo" src="assets/images/logo/logo-white.png" alt="logo">
@@ -120,7 +135,7 @@
 			<!-- logo start -->
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
-					<a href="index" class="header-logo__box js-pointer-large js-animsition-link">
+					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
 						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
 						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
 					</a>
@@ -139,7 +154,7 @@
 			<div class="header-contact js-midnight-color js-headroom">
 				<div class="header-contact__flex">
 					<div class="header-contact__anim">
-						<a href="contact" class="header-contact__btn vertical-text center js-pointer-large">
+						<a href="contact.html" class="header-contact__btn vertical-text center js-pointer-large">
 							<span class="vertical-text__inner"><i class="far fa-comment-dots"></i> Get in touch</span>
 						</a>
 					</div>
@@ -177,6 +192,13 @@
 							</a>
 						</div>
 					</li>
+					<li class="list__item">
+						<div class="hidden-box d-inline-block">
+							<a href=""  target="_blank" class="anim-slide tr-delay-06 js-pointer-small">
+								<i class="fab fa-youtube"></i>
+							</a>
+						</div>
+					</li>
 				</ul>
 			</div><!-- header-social end -->
 		</header><!-- header end -->
@@ -185,25 +207,25 @@
 		<nav class="landing-nav js-midnight-color">
 			<ul class="landing-nav__flex">
 				<li class="landing-nav__btn">
-					<a href="index" class="landing-nav__inner js-smooth-scroll js-pointer-large">Home</a>
+					<a href="index.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Home</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="about-us" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
+					<a href="about.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="services" class="landing-nav__inner js-smooth-scroll js-pointer-large">Services</a>
+					<a href="services.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Services</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="academy" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
+					<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="client" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
+					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="blog" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
+					<a href="blog.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="contact" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
+					<a href="contact.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
 				</li>
 			</ul>
 		</nav><!-- landing-nav end -->
@@ -223,49 +245,49 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="index" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="index.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Home">Home</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="about-us" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="about.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="About">About</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="services" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="services.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Services">Services</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="academy" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="academy.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Academy">Academy</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="client" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="client.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Client">Client</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="blog" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="blog.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Blog">Blog</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="contact.htlm" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="contact.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Contact">Contact</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -349,7 +371,7 @@
 									</span>
 								</h2>
 								<div class="margin-top-30 anim-fade tr-delay-08">
-									<a href="contact" class="border-btn js-pointer-large">
+									<a href="contact.html" class="border-btn js-pointer-large">
 										<span class="border-btn__inner">Let's Work Together</span>
 										<span class="border-btn__lines-1"></span>
 										<span class="border-btn__lines-2"></span>
@@ -381,7 +403,7 @@
 									</span> -->
 								</h2>
 								<div class="margin-top-30 anim-fade tr-delay-08">
-									<a href="services" class="border-btn js-pointer-large">
+									<a href="services.html" class="border-btn js-pointer-large">
 										<span class="border-btn__inner">Know More</span>
 										<span class="border-btn__lines-1"></span>
 										<span class="border-btn__lines-2"></span>
@@ -413,7 +435,7 @@
 									</span> -->
 								</h2>
 								<div class="margin-top-30 anim-fade tr-delay-08">
-									<a href="services" class="border-btn js-pointer-large">
+									<a href="services.html" class="border-btn js-pointer-large">
 										<span class="border-btn__inner">Know More</span>
 										<span class="border-btn__lines-1"></span>
 										<span class="border-btn__lines-2"></span>
@@ -681,7 +703,7 @@
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
-							<a href="contact" class="clients-lines__column js-pointer-large">
+							<a href="contact.html" class="clients-lines__column js-pointer-large">
 								<div class="clients-lines__inner hover-box pos-rel js-scrollanim">
 									<div class="padding-left-right-20 subhead-xxs text-center pos-abs pos-center-center">
 										<span class="anim-text-double-fill" data-text="This spot">This spot</span><br>
@@ -831,7 +853,7 @@
 						<!-- blog-entry start -->
 						<article class="flex-container flex-align-center padding-top-60">
 							<div class="six-columns padding-top-30">
-								<a href="Three-Essential-Digital-Marketing-Channels-In-2020" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+								<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
 											<img class="img-hover-scale" src="assets/images/posts/refine-marketing/vertical-target.jpg" alt="Post">
@@ -843,23 +865,23 @@
 								<div class="column-l-margin-40 anim-fade js-scrollanim">
 									<ul class="list list_row list_margin-30px">
 										<li class="list__item">
-											<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
+											<a href="#" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
 										</li>
 										<!-- <li class="list__item">
 											<a href="#" class="subhead-xxs text-color-888888 text-hover-to-red js-pointer-small">In: Art</a>
 										</li> -->
 										<li class="list__item">
-											<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">10 February 2021</a>
+											<a href="#" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">10 February 2021</a>
 										</li>
 									</ul>
-									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
+									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
 										<h3 class="headline-xs text-color-black">You Have a chance to<br>
 										Refine Your Marketing Approach</h3>
 										<p class="body-text-s margin-top-20 text-color-black">
 											2020 forced many small businesses to become focused in ways they didn’t imagine last winter. I’m not gonna enter the apparent details that we’ve all lived through recently. You’re alright conscious of them a day . At DAX , we’ve refined our approach during this point ...
 										</p>
 									</a>
-									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach" class="skew-btn js-pointer-large js-animsition-link">
+									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Continue reading</span>
 											<span class="skew-btn__arrow black"></span>
@@ -985,25 +1007,25 @@
 						<div class="four-columns footer-nav-mobile-padding">
 							<ul class="column-l-r-margin-10 footer-nav-list js-footer-hover-box">
 								<li>
-									<a href="index" class="footer-nav__btn js-pointer-small js-footer-hover-link">Home</a>
+									<a href="index.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Home</a>
 								</li>
 								<li>
-									<a href="about-us" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
+									<a href="about.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
 								</li>
 								<li>
-									<a href="services" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
+									<a href="services.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
 								</li>
 								<li>
-									<a href="academy" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
+									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
 								</li>
 								<li>
-									<a href="client" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
+									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
 								</li>
 								<li>
-									<a href="blog" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
+									<a href="blog.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
 								</li>
 								<li>
-									<a href="contact" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
+									<a href="contact.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
 								</li>
 							</ul>
 						</div><!-- column end -->
@@ -1059,6 +1081,9 @@
 						</li>
 						<li class="list__item">
 							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="linkedin">linkedin</a>
+						</li>
+						<li class="list__item">
+							<a href=""  target="_blank" class="flip-btn js-pointer-small" data-text="Youtube">Youtube</a>
 						</li>
 					</ul><!-- footer-social end -->
 
